==================== 2.23.2 ====================

2008-03-24  Jens Granseuer  <jensgr@gmx.net>

	* drw-break-window.c: (drw_break_window_init): amend previous commit
	to use GTK_STOCK_STOP instead of "gtk-stop"

2008-03-24  Jens Granseuer  <jensgr@gmx.net>

	* bar*.png: new Tango-style icons by David Prieto
	<frandavid100@gmail.com> (bug #523965)

	* drw-break-window.c: (drw_break_window_init): replace custom stop icon
	by gtk-stop stock icon
	* Makefile.am:
	* stop.png: remove

2008-02-05  Jens Granseuer  <jensgr@gmx.net>

	* drwright.c: add a comment for translators (bug #514598)

2007-06-26  Michael Terry  <mike@mterry.name>

	* Makefile.am: Update icon cache on uninstall as well as install.
	Part of bug #450777.

2007-06-08  Christian Persch  <chpe@gnome.org>

	* main.c: (main): NULL-terminate the options array.
	* ChangeLog: fixed.

2007-06-05  Christian Persch  <chpe@gnome.org>

	* typing-break/main.c: (main): Use GOption to parse the arguments. Bug
	#444399.

2007-06-05  Ross Burton  <ross@openedhand.com>

	* drw-monitor.c:
	* drw-break-window.c:
	* drwright.c:
	Use the second-accurate timers instead of the millisecond timers,
	in an attempt to use less processor time (#443547).

2007-06-05  Ross Burton  <ross@openedhand.com>

	* main.c:
	* Makefile.am:
	Don't use libgnome (#443554). Also clean up dist rules.

2007-02-02  William Jon McCann  <mccann@jhu.edu>

	* drw-break-window.c: (drw_break_window_class_init),
	(drw_break_window_init), (drw_break_window_finalize),
	(drw_break_window_dispose), (drw_break_window_new),
	(postpone_sensitize_cb), (clock_timeout_cb), (postpone_cancel_cb),
	(postpone_entry_key_press_event_cb), (postpone_clicked_cb):
	* drw-break-window.h:
	* drw-utils.c: (window_expose_event), (set_pixmap_background),
	(drw_setup_background):
	* drwright.c: (break_window_map_event_cb), (maybe_change_state),
	(create_secondary_break_windows):
	Use compositing to display the typing break window when
	available.  Fixes #363665.
